--- a/addons/stock/i18n/eu.po
+++ b/addons/stock/i18n/eu.po
@@ -296,7 +296,7 @@ msgstr "<strong>Egindako mugimendu lerroa zuzendu da.</strong>"
 #: model_terms:ir.ui.view,arch_db:stock.report_delivery_document
 #: model_terms:ir.ui.view,arch_db:stock.report_inventory
 msgid "<strong>Date</strong>"
-msgstr "<strong>data</strong>"
+msgstr "<strong>Data</strong>"
 
 #. module: stock
 #: model_terms:ir.ui.view,arch_db:stock.report_picking
@@ -332,7 +332,7 @@ msgstr "<strong>Kopuru min:</strong>"
 #: model_terms:ir.ui.view,arch_db:stock.report_delivery_document
 #: model_terms:ir.ui.view,arch_db:stock.report_picking
 msgid "<strong>Order</strong>"
-msgstr ""
+msgstr "<strong>Eskaera</strong>"
 
 #. module: stock
 #: model_terms:ir.ui.view,arch_db:stock.report_inventory
