--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+odoo (12.0.99) stable; urgency=low
+
+  * #11249 Traducciones a euskera varias.
+
+ -- Imanol Aranburu <iaranburu@binovo.es>  Fri, 13 Jan 2023 15:33:43 +0100
+
 odoo (12.0.98) stable; urgency=low
 
   * #10659 Añadir funciones parametrizables sale_purchase.
