[REF] 11249 - Traducciones euskera sale-stock

--- a/addons/sale_stock/i18n/eu.po
+++ b/addons/sale_stock/i18n/eu.po
@@ -104,7 +104,7 @@ msgstr "<span class=\"o_stat_text\">Salduta</span>"
 #. module: sale_stock
 #: model_terms:ir.ui.view,arch_db:sale_stock.report_delivery_document_inherit_sale_stock
 msgid "<strong>Customer Reference:</strong>"
-msgstr ""
+msgstr "<strong>Bezeroaren erreferentzia:</strong>"
 
 #. module: sale_stock
 #: model_terms:ir.ui.view,arch_db:sale_stock.sale_order_portal_content_inherit_sale_stock
