--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+odoo (12.0.107) stable; urgency=low
+
+  * #11656 Cambiar grupo cuentas en plantilla iva exento repercutido.
+
+ -- Imanol Aranburu <iaranburu@binovo.es>  Mon, 15 May 2023 10:35:48 +0200
+
 odoo (12.0.101) stable; urgency=low
 
   * #11977 Cambios en website_sale para favorecer herencia.
