[FIX] 12507: Cambiar traducción pedido portal web

--- a/addons/sale_management/i18n/es.po
+++ b/addons/sale_management/i18n/es.po
@@ -352,7 +352,7 @@ msgstr "Líneas de productos opcionales"
 #. module: sale_management
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_portal_content_inherit_sale_management
 msgid "Price"
-msgstr "Precio"
+msgstr "Precio unitario"
 
 #. module: sale_management
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__product_id
