--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+odoo (12.0.116) stable; urgency=low
+
+  [ Ugaitz Olaizola ]
+  * #13409 [UPD] website: actualizar script de google analytics para compatibilizarlo con
+  Analytics 4, código backporteado de la versión 16.0 de OCB
+
+ -- Ugaitz Olaizola <uolaizola@binovo.es>  Fri, 29 Sep 2023 12:28:35 +0200
+
 odoo (12.0.113) stable; urgency=low
 
   [Jesús Sánchez]
