[13409] [UPD] website: update google analytics script to make it compatible with Google Analytics 4, Google Universal Analytics is obsolete from July 2023 onwards

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+odoo (11.0.116) stable; urgency=low
+
+  [ Ugaitz Olaizola ]
+  * #13409 [UPD] website: actualizar script de google analytics para compatibilizarlo con
+  Analytics 4, código backporteado de la versión 16.0 de OCB
+
+
+ -- Ugaitz Olaizola <uolaizola@binovo.es>  Fri, 29 Sep 2023 13:00:18 +0200
+
 odoo (11.0.111) stable; urgency=low
 
   [ Ugaitz Olaizola ]
