--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,10 @@ odoo (12.0.116) stable; urgency=low
   * #13409 [UPD] website: actualizar script de google analytics para compatibilizarlo con
   Analytics 4, código backporteado de la versión 16.0 de OCB
 
- -- Ugaitz Olaizola <uolaizola@binovo.es>  Fri, 29 Sep 2023 12:28:35 +0200
+  [ Jesús Sánchez ]
+  * #13409 [UPD] base_address_city: hacer más estricta la búsqueda de city_id en el xpath
+
+ -- Jesús Sánchez <jsanchez@binovo.es>  Tue, 10 Oct 2023 14:14:02 +0100
 
 odoo (12.0.113) stable; urgency=low
 
